--- a/stack/README
+++ b/stack/README
@@ -1,12 +1,24 @@
+Actually that is not best solution - in this case the best solution is creating jenkins with workers as part of cluster and run it as pod and sure use groovy, but sorry guys I do not have enough time for this.
+I have created application and use the faster solution  - not the best) 
+
 This very very simple example how to run application using kubernetes
 Stack has run.sh script for full installation of system to virtualbox vm's
+
 ---------------------------------------
 ansible --version
 ansible 2.3.1.0
 
+Ubuntu 17.10
+
+VBoxManage --version
+5.1.34_Ubuntur121010
+
+vagrant -v
+Vagrant 2.0.4
+
 ------------------------------------------
 
-192.168.56.82 kuber.hello-world.com
+192.168.56.82 application.com
 
 -------------------------------------------
 
@@ -29,30 +41,18 @@ This installation contain few ansible steps:
 1) own - role need to anable ip forwading and reboot system
 2) kargo - role need to install cluster and install all kubernetes services like: etcd, kubectl etc
 3) dockerrepo - role need to install and run docker repository wiht ssl keys
-4) jenkinsans - role need to install jenkins, plugins and jobs
+4) helmmysql - database creation role
+5) jenkinsans - role need to install jenkins, plugins and jobs
 
 --------------------------------------------------------------------------
 
 In a case you want to change number of replicas you need just increase variable
 
-replicas: 1
-
-it's located into /home/helm/helloworld/templates/hello-readiness.yaml file of helm config (it can be moved to global variable)
-
-on master server (192.168.56.81) yum able to use following commands:
+on master server (192.168.56.81) you are able to use following commands:
 
 helml ls - global information regarding deployments
-helm upgrade "helloworld" ./helloworld/ --install   - upgrade example of new release ##from /home/helms directory (for example if you want increase replicas number without downtime replicas: 3)
-##==> v1/Pod(related)
-##NAME                    READY  STATUS             RESTARTS  AGE
-##hello-86f769b76f-5t982  0/1    ContainerCreating  0         0s
-##hello-86f769b76f-f5hvr  1/1    Running            0         19m
-##hello-86f769b76f-ghz67  0/1    ContainerCreating  0         0s
-
 
 kubectl get nodes - cluster status
 kubectl get pods  - pods status
 kubectl get services - service status
-
-kubectl describe pods hello-86f769b76f-f5hvr  (hello-86f769b76f-f5hvr - pod number from output of kubectl get pods)
 
