--- a/stack/README
+++ b/stack/README
@@ -64,7 +64,7 @@ ________________________________________________________________________________
 
 Step by step process for running the application
 
-1) you need to install no your pc the following applications:
+1) you need to install on your pc the following applications:
 
 ansible --version
 ansible 2.3.1.0
